testing my pull script

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <p>this is a project for showing some info. requires a null hub for some features</p>
         <h2>Slideshow</h2>
         <p>the main feature is the slideshow that cycles through some slides displaying information such as the time of day or the current weather.</p>
+        <p>testing an idea to make updating a few displays at once after i get stuff working on a dev one</p>
     </section>
     <footer>
         <nav>
