testing php pulling git with a shells cript

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <h2>Slideshow</h2>
         <p>the main feature is the slideshow that cycles through some slides displaying information such as the time of day or the current weather.</p>
         <p>testing an idea to make updating a few displays at once after i get stuff working on a dev one</p>
+        <p>ok.. so the first few tests didn't work... but maybe the shell script will work. if i remember to push the update to github.</p>
     </section>
     <footer>
         <nav>
