--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <p>the main feature is the slideshow that cycles through some slides displaying information such as the time of day or the current weather.</p>
         <p>testing an idea to make updating a few displays at once after i get stuff working on a dev one</p>
         <p>ok.. so the first few tests didn't work... but maybe the shell script will work. if i remember to push the update to github.</p>
+        <p>so far i'm not sure why it's not working</p>
     </section>
     <footer>
         <nav>
