--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,21 @@
     <title>web app interface</title>
 
     <link href="css/fonts.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+
+    <script src="js/models/model.js"></script>
+    <script src="js/views/view.js"></script>
+    <script src="js/controllers/controller.js"></script>
+
+    <script src="js/models/weather.js"></script>
 
 </head>
 <body>
-    this is the main interface for using whatever app this ends up being
+    <header></header>
+    <div id="sections">
+
+    </div>
+    <footer>
+        <nav class="sections"></nav>
+    </footer>
 </body>
