nicer landing... lets see which ones get update

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>null Micro Display</title>
+    <title>Null [Micro Display]</title>
 
     <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/apple-icon-60x60.png">
@@ -27,7 +27,7 @@
 </head>
 <body>
     <header>
-        <h1>Micro Display</h1>
+        <h1 class="null">null micro display</h1>
         <nav>
             <a href="/app">app</a>
             <a href="/phpMyAdmin">phpMyAdmin</a>
